--- a/.circleci/config-conditional-builds.yml
+++ b/.circleci/config-conditional-builds.yml
@@ -14,6 +14,7 @@ jobs:
         environment:
           discovery.type: single-node
           ES_JAVA_OPTS: -Xms750m -Xmx750m
+    steps:
       - when:
           condition: build-code
           steps:
